booq/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booq
  labels:
    app: booq

spec:
  selector:
    matchLabels:
      app: booq
  template:
    metadata:
      labels:
        app: booq
    spec:
      nodeSelector:
        kubernetes.io/hostname: las211.tokyotech.org

      containers:

        - name: booq-frontend
          image: ghcr.io/traptitech/booq-ui:2.1.3
          ports:
            - containerPort: 80

        - name: booq-backend
          image: ghcr.io/traptitech/booq:v1.5.4
          ports:
            - containerPort: 3001
