booq/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: booq-ingressroute

spec:
  entryPoints:
    - websecure
  tls:
    secretName: booq-tls

#注 他のファイルと違い backend -> frontend の順に記述してある。
  routes:
    - match: Host(`booq.trap.jp`) && PathPrefix(`/api/`)
      middlewares:
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - kind: Service
          name: booq-backend-service
          port: 3001
          scheme: http
    - match: Host(`booq.trap.jp`)
      middlewares:
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - kind: Service
          name: booq-ui-service
          port: 80
          scheme: http
